--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9.18.0",
     "eslint-config-next": "15.1.4",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import-helpers": "^2.0.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "postcss": "^8",
