--- a/package.json
+++ b/package.json
@@ -18,19 +18,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@eslint/js": "^9.18.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.18.0",
+    "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import-helpers": "^2.0.1",
-    "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "typescript-eslint": "^8.20.0"
+    "typescript": "^5"
   }
 }
